[build-system]
requires = ["pdm-backend", "setuptools>=69", "wheel"]
build-backend = "pdm.backend"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.(git|hg|mypy_cache|tox|venv)
  | _?build
  | dist
)/
'''
skip-string-normalization = true

[tool.ruff]
line-length = 79
select = [
  # Pyflakes
  "F",
  # Pycodestyle
  "E",
  "W",
  # isort
  "I001",
]

src = ["hyperscan", "tests"]

[tool.ruff.isort]
known-first-party = ["hyperscan"]

[tool.cibuildwheel]
build-frontend = "build"
test-command = "bash {project}/build_tools/wheels/test_wheels.sh {project}"
before-test = "bash {project}/build_tools/wheels/before_test.sh"
# Will avoid testing on emulated architectures and macOS Apple silicon
test-skip = "*-*linux_{aarch64,ppc64le,s390x} *-macosx_arm64"

manylinux-x86_64-image = "ghcr.io/darvid/python_hyperscan_manylinux_2_28_x86_64:2024-01-08-5c754d0"
manylinux-pypy_x86_64-image = "ghcr.io/darvid/python_hyperscan_manylinux_2_28_x86_64:2024-01-08-5c754d0"
musllinux-x86_64-image = "ghcr.io/darvid/python_hyperscan_musllinux_1_1_x86_64:2024-01-08-5c754d0"

# repair-wheel-command = [
#   'pip install auditwheel-symbols',
#   'auditwheel-symbols --manylinux 2014 {wheel}',
#   'python scripts/repair_wheel.py -w {dest_dir} {wheel}',
#   'python scripts/check_repaired_wheel.py -w {dest_dir} {wheel}',
# ]

[tool.cibuildwheel.linux.environment]
# LD_LIBRARY_PATH = "/opt/vectorscan/lib:/opt/vectorscan/lib64:$LD_LIBRARY_PATH"
LIBRARY_PATH = "/opt/vectorscan/lib:/opt/vectorscan/lib64"
PCRE_PATH = "/opt/pcre/.libs"

[tool.cibuildwheel.macos.environment]
LD_LIBRARY_PATH = "/opt/vectorscan/lib:/usr/local/lib"
LIBRARY_PATH = "/opt/vectorscan/lib:/usr/local/lib"
DYLD_LIBRARY_PATH = "/opt/vectorscan/lib:/usr/local/lib"
PKG_CONFIG_PATH = "/opt/vectorscan/lib/pkgconfig:/opt/pcre/lib/pkgconfig:/usr/local/lib/pkgconfig:$PKG_CONFIG_PATH"
PDM_HOME = "/tmp/pdm"

[tool.pdm]
[tool.pdm.build]
is-purelib = false
run-setuptools = true

[tool.pdm.dev-dependencies]
dev = ["ipython>=8.12.2", "rich>=13.5.0"]
lint = [
  "black>=23.7.0",
  "isort>=5.12.0",
  "ruff>=0.0.280",
  "pre-commit>=2.21.0",
  "clang-format>=9.0.0",
]
test = [
  "pytest>=6.2.5",
  "pytest-mock>=3.11.1",
  "requests>=2.31.0",
  "urllib3>=1.26.16",
  "tox>=3.28.0",
  "memunit>=0.5.2",
  "pytest-xdist>=3.3.1",
  "joblib>=1.3.1",
]
release = [
  "python-semantic-release>=8.0.0",
  "setuptools>=69.0.0",
  "setuptools-scm>=7.1.0",
]
build = ["cibuildwheel>=2.16.2", "build>=0.10.0"]
memprofile = ["matplotlib>=3.7.2", "numpy>=1.26", "scipy>=1.12"]

[tool.pdm.version]
source = "file"
path = "src/hyperscan/_version.py"

[tool.setuptools.dynamic]
version = { attr = "hyperscan._version.__version__" }

[tool.semantic_release]
commit_parser = "emoji"
version_variables = [
  "src/hyperscan/_version.py:__version__",
]

[tool.semantic_release.branches.release]
match = '(main|create-pull-request/patch|release/v?[\\d\\.\\-]+)'
prerelease = false

[tool.semantic_release.commit_parser_options]
major_tags = [":boom:"]
minor_tags = [
  ":sparkles:",
  ":children_crossing:",
  ":lipstick:",
  ":iphone:",
  ":egg:",
  ":chart_with_upwards_trend:",
]
patch_tags = [
  ":ambulance:",
  ":lock:",
  ":bug:",
  ":zap:",
  ":goal_net:",
  ":alien:",
  ":wheelchair:",
  ":speech_balloon:",
  ":mag:",
  ":apple:",
  ":penguin:",
  ":checkered_flag:",
  ":robot:",
  ":green_apple:",
]

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*", "wheelhouse/*"]

[project]
name = "hyperscan"
dynamic = ["version"]
description = "Python bindings for Hyperscan."
authors = [{ name = "David Gidwani", email = "david.gidwani@gmail.com" }]
requires-python = ">=3.9,<4.0"
license = { text = "MIT" }
keywords = ["regex", "hypercan"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Unix",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/darvid/python-hyperscan"
Repository = "https://github.com/darvid/python-hyperscan"
Documentation = "https://python-hyperscan.readthedocs.io/en/latest/"
